Make several cosmetic fixes in the base template (fixes #3)

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-08 12:54+0200\n"
+"POT-Creation-Date: 2021-01-11 12:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,24 +25,34 @@ msgstr "Περιφερεια Ηπειρου"
 #: aira/base/main.html:22
 msgid ""
 "This web application aims to support the application of good agricultural "
-"practices regarding irrigation water use and has been developed using as "
-"base the open software which is freely available as a deliverable of the "
-"project ETCP GR-IT 2007-2013 IRMA, and uses meteorological data freely "
-"available through openmeteo.org."
+"practices regarding irrigation water use and has been based on open/free "
+"software. It uses meteorological data freely available through openmeteo.org."
 msgstr ""
 "Η εφαρμογή αυτή στοχεύει στην υποστήριξη της εφαρμογής καλών αρδευτικών "
-"πρακτικών όσο αφορά το νερό άρδευσης και έχει αναπτυχθεί χρησιμοποιώντας ως "
-"βάση το ανοικτό λογισμικό που διατίθεται ελεύθερα ως παραδοτέο του έργου "
-"ETCP GR-IT 2007-2013 IRMA ενώ αξιοποιεί μετεωρολογικά δεδομένα που "
-"διατίθενται ελεύθερα μέσω της πλατφόρμας openmeteo.org."
+"πρακτικών όσον αφορά το νερό άρδευσης και έχει αναπτυχθεί χρησιμοποιώντας ως "
+"βάση ανοικτό λογισμικό που διατίθεται ελεύθερα, ενώ αξιοποιεί μετεωρολογικά "
+"δεδομένα που διατίθενται ελεύθερα μέσω της πλατφόρμας openmeteo.org."
 
-#: aira/base/main.html:41
+#: aira/base/main.html:25
+msgid ""
+"\n"
+"          <p>Local Organization for Land Reclamation (ΤΟΕΒ) of Poros</p>\n"
+"          <p>Diastavrosi Vasilikis-Drosochoriou<br>45500 "
+"Drosochori<br>Ioannina</p>\n"
+"        "
+msgstr "\n<p>ΤΟΕΒ Πόρου<br>Διασταύρωση Βασιλικής-Δροσοχωρίου<br>45500 Δροσοχώρι<br>Ιωάννινα</p>"
+
+#: aira/base/main.html:43
 msgid "Terms of use"
 msgstr "Όροι χρήσης"
 
 #: aira/base/navbar.html:6
-msgid "PARTICIPATORY SYSTEM FOR IRRIGATION RECOMMENDATIONS (PLAIN OF POROS)"
-msgstr "ΣΥΛΛΟΓΙΚΟ ΣΥΣΤΗΜΑ ΠΑΡΟΧΗΣ ΣΥΜΒΟΥΛΩΝ ΑΡΔΕΥΣΗΣ ΓΙΑ ΤΗΝ ΠΕΔΙΑΔΑ ΤΟΥ ΠΟΡΟΥ"
+msgid ""
+"PARTICIPATORY SYSTEM FOR IRRIGATION RECOMMENDATIONS (PLAIN OF POROS, "
+"IOANNINA)"
+msgstr ""
+"ΣΥΛΛΟΓΙΚΟ ΣΥΣΤΗΜΑ ΠΑΡΟΧΗΣ ΣΥΜΒΟΥΛΩΝ ΑΡΔΕΥΣΗΣ ΓΙΑ ΤΟΝ ΤΟΕΒ ΠΟΡΟΥ (ΓΟΕΒ "
+"ΛΕΚΑΝΗΣ ΙΩΑΝΝΙΝΩΝ)"
 
 #: aira/frontpage/main.html:14
 msgid "Agrometeorological stations network"
