--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-18 18:06+0200\n"
+"POT-Creation-Date: 2021-01-21 13:54+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,3 +72,7 @@ msgstr "Πρόβλεψη καιρού (agromonitoring)"
 #: aira/frontpage/main.html:30
 msgid "Irrigation network"
 msgstr "Αρδευτικό δίκτυο"
+
+#: aira/frontpage/main.html:31
+msgid "Drainage network"
+msgstr "Στραγγιστικό δίκτυο"
