Link to POSEIDON forecast instead of agromonitoring

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-08 15:27+0200\n"
+"POT-Creation-Date: 2021-02-19 15:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,12 +26,14 @@ msgstr "Περιφερεια Ηπειρου"
 msgid ""
 "This web application aims to support the application of good agricultural "
 "practices regarding irrigation water use and has been based on open/free "
-"software. It uses meteorological data freely available through openmeteo.org."
+"software. It uses meteorological data freely available through openmeteo.org "
+"and forecasts from openweathermap.org / agromonitoring.com."
 msgstr ""
 "Η εφαρμογή αυτή στοχεύει στην υποστήριξη της εφαρμογής καλών αρδευτικών "
 "πρακτικών όσον αφορά το νερό άρδευσης και έχει αναπτυχθεί χρησιμοποιώντας ως "
-"βάση ανοικτό λογισμικό που διατίθεται ελεύθερα, ενώ αξιοποιεί μετεωρολογικά "
-"δεδομένα που διατίθενται ελεύθερα μέσω της πλατφόρμας openmeteo.org."
+"βάση ανοικτό λογισμικό, ενώ αξιοποιεί μετεωρολογικά δεδομένα που διατίθενται "
+"ελεύθερα μέσω της πλατφόρμας openmeteo.org και προγνώσεις καιρού από "
+"openweathermap.org / agromonitoring.com."
 
 #: aira/base/main.html:25
 msgid ""
@@ -70,5 +72,5 @@ msgid "Data"
 msgstr "Δεδομένα"
 
 #: aira/frontpage/main.html:21
-msgid "Weather forecast (agromonitoring)"
-msgstr "Πρόβλεψη καιρού (agromonitoring)"
+msgid "Weather forecast (POSEIDON)"
+msgstr "Πρόβλεψη καιρού (POSEIDON)"
